fixed notebook directory errors

--- a/my_catalog_notes.ipynb
+++ b/my_catalog_notes.ipynb
@@ -9,17 +9,21 @@
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "figDIR = '../figures/hsc_cat_udgs/'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UDG candidates in HSC catalog\n",
+    "# UDG candidates in the HSC catalog\n",
     "\n",
     "The catalog likes to shred UDG-like objects into a parent with many ($\\sim5-20$) children. <br>\n",
     "Currently, I think the HSM _parent_ shapes are the best (still not great, though). <br> \n",
+    "\n",
+    "## HSM shapes\n",
+    "\n",
     "The image below shows a UDG candidate with ellispes drawn using the HSM shape model. <br>\n",
     "Green ellipses are parents, red are children. "
    ]
@@ -44,13 +48,15 @@
     }
    ],
    "source": [
-    "display(Image(filename='figures/udg_2_hsm.jpg'))"
+    "display(Image(filename=figDIR+'udg_2_hsm.jpg'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## cmodel shapes\n",
+    "\n",
     "Here's the same object with ellipses drawn using the cmodel shapes:"
    ]
   },
@@ -73,14 +79,14 @@
     }
    ],
    "source": [
-    "display(Image(filename='figures/udg_2_cmodel.jpg'))"
+    "display(Image(filename=figDIR+'udg_2_cmodel.jpg'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This one appears to be nucleated: "
+    "## A nucleated UDG candidate: "
    ]
   },
   {
@@ -103,7 +109,7 @@
     }
    ],
    "source": [
-    "display(Image(filename='figures/udg_3_hsm_nucleated.jpg'))"
+    "display(Image(filename=figDIR+'udg_3_hsm_nucleated.jpg'))"
    ]
   }
  ],
