cleaned up text in notebook

--- a/my_catalog_notes.ipynb
+++ b/my_catalog_notes.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "## HSM shapes\n",
     "\n",
-    "The image below shows a UDG candidate with ellispes drawn using the HSM shape model. <br>\n",
+    "The image below shows a UDG candidate with ellipses drawn using the HSM shape model. <br>\n",
     "Green ellipses are parents, red are children. "
    ]
   },
