i-band mag zero point calculation; changed base directory name to projects

--- a/my_catalog_notes.ipynb
+++ b/my_catalog_notes.ipynb
@@ -111,6 +111,70 @@
    "source": [
     "display(Image(filename=figDIR+'udg_3_hsm_nucleated.jpg'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What's the zero point i-band mag?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from hscana import MyCat\n",
+    "tract = 9347\n",
+    "patch = '5,8'\n",
+    "mycat = MyCat(tract, patch)\n",
+    "calib = mycat.exp.getCalib()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_0 = 63095734448.0 units?\n",
+      "M_0 = -27.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "F0 = calib.getFluxMag0()[0]\n",
+    "print 'F_0 =', F0, 'units?' \n",
+    "print 'M_0 =', -2.5*np.log10(F0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63095734448.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print calib.getFlux(0.0)"
+   ]
   }
  ],
  "metadata": {
@@ -129,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
