option to pass group redshift instead of id

--- a/my_catalog_notes.ipynb
+++ b/my_catalog_notes.ipynb
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What's the zero point i-band mag?"
+    "### What are the zero point band mags?"
    ]
   },
   {
@@ -125,55 +125,35 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G band\n",
+      "M_0 = 27.0\n",
+      "R band\n",
+      "M_0 = 27.0\n",
+      "I band\n",
+      "M_0 = 27.0\n",
+      "Z band\n",
+      "M_0 = 27.0\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from hscana import MyCat\n",
     "tract = 9347\n",
     "patch = '5,8'\n",
-    "mycat = MyCat(tract, patch)\n",
-    "calib = mycat.exp.getCalib()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F_0 = 63095734448.0 units?\n",
-      "M_0 = -27.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "F0 = calib.getFluxMag0()[0]\n",
-    "print 'F_0 =', F0, 'units?' \n",
-    "print 'M_0 =', -2.5*np.log10(F0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "63095734448.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print calib.getFlux(0.0)"
+    "for band in 'GRIZ':\n",
+    "    print band, 'band'\n",
+    "    mycat = MyCat(tract, patch, band=band)\n",
+    "    calib = mycat.exp.getCalib()\n",
+    "    F0 = calib.getFluxMag0()[0]\n",
+    "    #print 'F_0 =', F0, 'units?' \n",
+    "    print 'M_0 =', 2.5*np.log10(F0)\n",
+    "    #print calib.getFlux(0.0)"
    ]
   }
  ],
